# lockerai-edge

./: .env.example  .gitignore  README.md  lefthook.yaml  lockerai-edge.code-workspace  pyproject.toml  ruff.toml
src/: main.py
src/infra/: gpio_driver.py  qr_code_reader_driver.py  uart_driver.py
src/model/: drawer.py  user.py
src/script/: qr_code.py  solenoid-gpio.py  solenoid-uart.py  solenoid.py
src/service/: __init__.py
